# sokrates

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CRUSH.md  MANIFEST.in  README.md  README_PUBLISHING.md  config.yml.example  pyproject.toml  test_all_commands.py
.clinerules/workflows/: update-readme.md
.kilocode/rules/: general_rules.md
.kilocode/workflows/: update-readme-general.md  update-script-header.md
.roo/rules/: project_rules.md
docs/: 00_refactoring_and_architecture_planning.md  context_llm_tools_usage.md  project-context.md
docs/features/: 00_prioritized_feature_list.md  sequential_task_executor_design.md
specification/features/cli-user-experience/: behaviors.md  tests.md
specification/project/: architecture.md  concepts.md  conventions.md  description.md  test-strategy.md
src/assets/: signal_2.wav.asd
src/llm_tools/: __init__.py  colors.py  config.py  file_helper.py  idea_generation_workflow.py  llm_api.py  lmstudio_benchmark.py  meta_prompt_workflow.py  output_printer.py  prompt_refiner.py  refinement_workflow.py  system_monitor.py  voice_helper.py
src/llm_tools/cli/: benchmark_model.py  generate_mantra.py  idea_generator.py  list_models.py  llm_chat.py  meta_prompt_generator.py  refine_and_send_prompt.py  refine_prompt.py  send_prompt.py
src/sokrates/: __init__.py  config.py  constants.py  file_helper.py  llm_api.py  prompt_constructor.py  prompt_refiner.py  sequential_task_executor.py  text_to_speech.py  voice_helper.py
src/sokrates/cli/: helper.py  main.py  sokrates_benchmark_model.py  sokrates_benchmark_results_merger.py  sokrates_breakdown_task.py  sokrates_chat.py  sokrates_execute_tasks.py  sokrates_fetch_to_md.py  sokrates_generate_mantra.py  sokrates_guide.py  sokrates_idea_generator.py  sokrates_list_models.py  sokrates_merge_ideas.py  sokrates_refine_and_send_prompt.py  sokrates_refine_prompt.py  sokrates_send_prompt.py
src/sokrates/coding/: analyze_repository_workflow.py.backup  code_review_workflow.py  python_analyzer.py  test_generator.py
src/sokrates/task_queue/: __init__.py  daemon.py  database.py  file_processor.py  file_watcher.py  manager.py  orm.py  processor.py  status_tracker.py
src/sokrates/workflows/: __init__.py  idea_generation_workflow.py  lmstudio_benchmark.py  merge_ideas_workflow.py  (+2 more)
tasks/cli-user-experience/: progress.txt  tasks.yaml
tests/: conftest.py  file_helper_test.py  prompt_refiner_test.py  python_analyzer_test.py  refinement_workflow_test.py  test_config.py  test_file_helper.py  test_llm_api.py  test_prompt_refiner.py
tests/coding/: test_analyze_repository_workflow.py  test_python_analyzer.py  test_python_analyzer_test_generation.py
tests/contexts/: context_formulation.md
tests/documents/: cats.md  dogs.md
tests/integration_tests/: test_cli_user_experience.py  test_idea_generation_workflow.py  test_merge_ideas_workflow.py  test_refinement_workflow.py  test_sequential_task_executor.py  test_test_generator.py
tests/prompts/: 00testprompt.md  01testprompt.md  02testprompt.md  03testprompt.md  04testprompt.md  05testprompt.md  rap_deutsch_analyse.md
tests/task_queue/: test_database.py  test_file_watcher.py
tests/tasks/: black_holes.json  cat_minzi.json  llm_testing_coding.json  llm_testing_general.json
tests/topics/: ai_agent_devops_ideas_topic.md  ai_game_business_topic.md  ai_introduction_for_children.md  rap_track_ideas_topic.md
tests/unit_tests/: test_cli_user_experience.py
(+25 files in other folders)
